--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -1,2 +1,303 @@
 ### 📌 10.1 배열과 메모리
-- 
+- index는 0번째부터의 거리를 의미.
+
+<img width="350" src="https://github.com/user-attachments/assets/92b0dc35-216f-49a4-ac0b-1fe5c6939ae2"/>
+
+
+### 📌 10.2 배열의 기본적인 사용방법
+``` c
+#include <stdio.h>
+
+#define MONTHS 12	// symbolic constant를 macro로 정의.
+
+int main()
+{
+	// Basic usage
+	int high[MONTHS] = { 2, 5, 11, 18, 23, 27, 29, 30, 26, 20, 12, 4 };
+
+	for (int i = 0; i < MONTHS; ++i)
+		printf("%d ", high[i]);
+	printf("\n");
+
+	float avg = 0.0;
+	for (int i = 0; i < MONTHS; ++i)
+		avg += high[i];
+	printf("Average = %f\n", avg / (float)MONTHS);
+
+	high[0] = 1;
+	high[1] = 2;
+	//high = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 }; // Not working
+	//high[12] = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 }; // Not working
+	
+
+	// Addresses
+	printf("%p %p\n", high, &high[0]);  // 00F5FC98 00F5FC98  <<- SAME !
+	for (int i = 0; i < MONTHS; ++i)
+		printf("%lld\n", (long long)&high[i]);
+	printf("\n");
+
+
+	//index 에러!  (Compiler doesn't check whether indices are valid.)
+	high[12] = 4;//Eror
+	high[-1] = 123;//Error
+
+
+	// 값을 바꿀 수 없음. (const and array)
+	const int temp = 0;
+	temp = 4;
+	const int low[12] = { -7, -5, 1, 7, 13, 18, 22, 22, 16, 9, 2, -5 };
+	low[0] = 123;
+
+	
+	// When array is not initialized
+	// static을 붙히면 알아서 초기화가 된다.
+	int not_init[4];	//TODO: try static (storage class)
+	for (int i = 0; i < 4; ++i)
+		printf("%d\n", not_init[i]);
+
+
+	// Partially initialized
+	// 부족하게 값을 초기화 해주면, 0으로 채워준다.
+	int insuff[4] = { 2, 4 };
+	for (int i = 0; i < 4; ++i)
+		printf("%d\n", insuff[i]);  // 2 4 0 0
+
+
+	// Overlly initialized
+	int over[2] = { 2, 4, 8, 16 };  // error C2078: too many initializers
+
+
+	// Omitting size
+	// [] : 배열의 사이즈를 알아서 계산해준다.
+	// for문이 필요할 시, 전체 칸 사이즈 / 한 칸 사이즈 로 나눠서 배열의 사이즈 파악 가능.
+  //동적할당으로 메모리를 받아서 Array처럼 사용할 때는 해당 방식 불가.
+	const int power_of_twos[] = { 1, 2, 4, 8, 16, 32, 64 };
+	printf("%d\n", sizeof(power_of_twos));
+	printf("%d\n", sizeof(int));
+	printf("%d\n", sizeof(power_of_twos[0]));
+	
+	for (int i = 0; i < sizeof power_of_twos / sizeof power_of_twos[0]; ++i)
+		printf("%d ", power_of_twos[i]);
+
+
+	// 인덱스 지정해서 값 할당하기 (Designated initializers)
+	int days[MONTHS] = { 31, 28,[4] = 31, 30, 31,[1] = 29 };
+	for (int i = 0; i < MONTHS; ++i)
+		printf("%d ", days[i]);  // 31 29 0 0 31 30 31 0 0 0 0 0
+
+
+	// Specifying Array sizes
+	int arr1[MONTHS];				// ok.  Symbolic integer constant
+	double arr2[123];				// ok.  Literal integer constant
+	float arr3[3 * 4 + 1];			// ok. compile에서 미리 계산이 가능하기 때문.
+	float arr4[sizeof(int) + 1];	// ok. 
+	//float arr5[-10];				// No. 공간에 - 개념은 없음.
+	//float arr6[0];				// No
+	//float arr7[1.5];				// No
+	float arr8[(int)1.5];			// ok. 
+
+
+	// VLA : Variable-Length Array is optional from C11
+	// 배열의 크기를 컴파일 타임에 정하지 않고 실행 타임에 정할 수 있도록 하는 기능
+	// compiler에 따라 안될 수 도 있다. VS o VScode GCC x
+	int n = 8;
+	float arr9[n];
+
+	//// online c compiler
+	//int n = 5;
+	//float arr[n];
+
+	//for(int i = 0; i < n; ++i)
+	//	arr[i] = (float)i;
+
+	//for(int i = 0; i < n; ++i)
+	//	printf("%f ", arr[i]);
+
+	//return 0;
+	
+	return 0;
+}
+```
+
+
+### 📌 10.3 포인터의 산술 연산
+``` c
+#include <stdio.h>
+
+int main()
+{
+	// (int*)0 → 0을 정수형에서 int* 포인터 타입으로 변환
+	int* ptr = 0;// try double*, long long*, char*, void*
+
+	//printf("%d", *ptr);  //Error in this lecture
+
+	// point +1은 자료형 사이즈 만큼 더하는 결과가 나온다. (몇 칸을 연산할건지)
+	printf("%p %lld\n", ptr, (long long)ptr);  // 00000000 0
+	ptr += 1;	// try -=, ++, --, -, +
+	printf("%p %lld\n", ptr, (long long)ptr);  // 00000004 4  <<- int형이니까 4byte
+
+	// 아예 안되게 막아놓았다. 1
+	//ptr = -ptr;	// Not working
+	//ptr = +ptr;	// Not working
+
+	// Subtraction
+	double arr[10];
+	double* ptr1 = &arr[3], * ptr2 = &arr[5];
+
+	// 아예 안되게 막아놓았다. 2
+	//int * ptr3 = ptr1 + ptr2;	// Not working
+
+	// 빼기(Subtract)는 된다! (얼마나 떨어져 있는지 파악 가능)
+	int i = ptr2 - ptr1;	// meaning?
+
+	printf("%lld %lld %d\n", (long long)ptr1, (long long)ptr2, i);  // 13630616 13630632 2
+
+	return 0;
+}
+```
+
+
+### 📌 10.4 포인터와 배열
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int arr[10];
+
+	int num = sizeof(arr) / sizeof(arr[0]);
+	for (int i = 0; i < num; ++i)
+		arr[i] = (i + 1) * 100;
+
+	int* ptr = arr;
+
+	printf("%p %p %p\n", ptr, arr, &arr[0]);  // all same
+
+	ptr += 2;
+
+	printf("%p %p %p\n", ptr, arr + 2, &arr[2]);  // all saㅊme
+
+	// 포인터 변수가 포인터 산술연산하는 것은 되는데, 배열의 이름 자체는 안된다.
+	// Note: arr += 2; // invalid
+
+	printf("%d %d %d\n", *(ptr + 1), *(arr + 3), arr[3]);  // 400 400 400     //Note: *(ptr+1) == ptr[1]
+	//printf("%d %d %d\n", *ptr + 1, *arr + 3, arr[3]);    // Warning
+
+
+	// practice
+	//int* ptr = NULL;
+	//ptr = arr;
+	// int* ptr = arr;
+	for (int i = 0, * ptr = arr; i < num; ++i)  // for문 안쪽에 선언하면 scope ok!
+	{
+		printf("%d %d\n", *ptr++, arr[i]);  // 100 ~ 1000
+		//printf("%d %d\n", *(ptr + i), arr[i]);
+		//printf("%d %d\n", *ptr + i, arr[i]);
+	}
+
+	return 0;
+}
+```
+
+
+### 📌 10.5 2차원 배열과 메모리
+- 2차원 배열도 메모리는 1차원이다.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	// 2d-array 선언할 때
+	int arr[2][3] = { {1, 2, 3},
+					  {4, 5, 6} };
+
+	//int arr[2][3] = { 1, 2, 3,
+	//					4, 5, 6 };
+	//int arr[2][3] = { 1, 2 };// insufficient initializer
+
+	printf("%d\n\n", arr[1][1]);
+
+
+	// for문 사용 예시
+	//Note: inner loop uses i. why?
+	// 01 02 03 11 12 13 순서대로 출력하는 것이 더 cost가 적다.(빠르다)
+	for (int j = 0; j < 2; ++j)
+	{
+		for (int i = 0; i < 3; ++i)
+			printf("%d ", arr[j][i]);
+
+		printf("\n");
+	}
+	printf("\n");
+
+	// array를 pointer에 1씩 더해가면서 출력.
+	int* ptr = &arr[0][0];
+	for (int k = 0; k < 6; ++k)
+		printf("%d ", ptr[k]);
+	printf("\n\n");
+
+	// row의 크기 출력
+	printf("%zd %zd\n", sizeof(arr), sizeof(arr[0]));  // 24 12
+	printf("\n");
+
+
+	// 3D array
+	int arr_3d[2][3][4] = {
+							{
+							  {000, 001, 002, 003},
+							  {010, 011, 012, 013},
+							  {020, 021, 022, 023},
+													},
+							{
+							  {100, 101, 102, 103},
+							  {110, 111, 112, 113},
+							  {120, 121, 122, 123},
+													}
+														};
+
+	for (int k = 0; k < 2; ++k)
+	{
+		for (int j = 0; j < 3; ++j)
+		{
+			for (int i = 0; i < 4; ++i)
+				printf("%d ", arr_3d[k][j][i]);
+			printf("\n");
+		}
+		printf("\n");
+	}
+
+	return 0;
+}
+```
+
+
+### 📌 10.6 2차원 배열 연습문제
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
