--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -272,7 +272,85 @@ int main()
 
 
 ### 📌 10.6 2차원 배열 연습문제
+``` c
+#include <stdio.h>
 
+#define MONTHS 12
+#define YEARS 3
+
+int main()
+{
+	double year2016[MONTHS] = { -3.2, 0.2, 7.0, 14.1, 19.6, 23.6, 26.2, 28.0, 23.1, 16.1, 6.8, 1.2 };
+	double year2017[MONTHS] = { -1.8, -0.2, 6.3, 13.9, 19.5, 23.3, 26.9, 25.9, 22.1, 16.4, 5.6, -1.9 };
+	double year2018[MONTHS] = { -4.0, -1.6, 8.1, 13.0, 18.2, 23.1, 27.8, 28.8, 21.5, 13.1, 7.8, -0.6 };
+
+	//1. Use 2D array
+	//2. Print data
+	//3. Calculate and print yearly average temperatures of 3 years
+	//4. Calculate and print monthly average temperatures for 3 years
+
+
+	double arr[YEARS][MONTHS] = {
+		{ -3.2, 0.2, 7.0, 14.1, 19.6, 23.6, 26.2, 28.0, 23.1, 16.1, 6.8, 1.2 },
+		{ -1.8, -0.2, 6.3, 13.9, 19.5, 23.3, 26.9, 25.9, 22.1, 16.4, 5.6, -1.9 },
+		{ -4.0, -1.6, 8.1, 13.0, 18.2, 23.1, 27.8, 28.8, 21.5, 13.1, 7.8, -0.6 }
+	};
+
+
+	printf("[Temperature Data]\n");
+
+	printf("Year index : ");
+	for (int i = 0; i < MONTHS; ++i)
+		printf("\t%d", i+1);
+	printf("\n");
+
+	for (int j = 0; j < YEARS; ++j)
+	{
+		printf("Year %d     : ", j);
+		for (int i = 0; i < MONTHS; ++i)
+		{
+			printf("\t%.1lf", arr[j][i]);
+		}
+		printf("\n");
+	}
+	printf("\n");
+	
+
+	printf("[Yearly average temperatures of 3 years]\n");
+
+	for (int j = 0; j < YEARS; ++j)
+	{
+		double tot = 0;
+		for (int i = 0; i < MONTHS; ++i)
+			tot += arr[j][i];
+		printf("Year %d : average temperature = %.1lf", j, tot / MONTHS);
+		printf("\n");
+	}
+	printf("\n");
+
+
+	printf("[Monthly average temperatures of 3 years]\n");
+	printf("Year index : ");
+	for (int i = 0; i < MONTHS; ++i)
+		printf("\t%d", i + 1);
+	printf("\n");
+
+	printf("Avg temps  : ");
+	for (int i = 0; i < MONTHS; ++i)
+	{
+		double tot = 0;
+		for (int j = 0; j < YEARS; ++j)
+			tot += arr[j][i];
+		printf("\t%.1lf", tot / YEARS);
+	}
+	printf("\n");
+	
+	return 0;
+}
+```
+
+
+### 📌 10.7 배열을 함수에게 전달해주는 방법
 
 
 
