--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -351,23 +351,148 @@ int main()
 
 
 ### 📌 10.7 배열을 함수에게 전달해주는 방법
+- C에서는 배열을 함수로 전달할 때 배열 이름이 포인터처럼 동작하므로,  
+  double arr[]와 double* arr은 같은 의미를 가진다.
+``` c
+#include <Stdio.h>
+
+//double average(double* arr, int n);
+//double average(double*, int n);
+//double average(double array[], int n);  // 숫자를 넣어봤자 의미가 없음.
+//double average(double[], int n);
+
+//double average(double*, int);
+double average(double* array, int n);
+
+int main()
+{
+	double arr1[5] = { 10, 13, 12, 7, 8 };
+	//double arr2[5] = { 1.8, -0.2, 6.3, 13.9, 20.5};
+	double arr2[3] = { 1.8, -0.2, 6.3 };
+
+	printf("Address = %p\n", arr1);
+	printf("Size = %zd\n", sizeof(arr1));
+
+	printf("Avg = %f\n", average(arr1, sizeof(arr1)/sizeof(double)));
+	printf("Avg = %f\n", average(arr2, sizeof(arr2)/sizeof(double)));
+
+	return 0;
+}
+
+double average(double* array, int n)
+{
+	double avg = 0.0;
+	for (int i = 0; i < n; ++i)
+		avg += array[i];
+	avg /= (double)n;
+
+	return avg;
+}
+```
 
 
+### 📌 10.8 두 개의 포인터로 배열을 함수에게 전달해주는 방법
+``` c
+#include <stdio.h>
+
+double average(double*, double*);
+
+int main()
+{
+	double arr1[5] = { 1, 2, 3, 4, 5 };
+	//printf("%p %lf\n", arr1, *arr1);
+	//printf("%p %lf\n", arr1 + 5, *(arr1 + 5));
+	printf("Avg = %f\n", average(arr1, arr1 + 5));
+
+	return 0;
+}
+
+double average(double* st, double* ed)
+{
+	int count = (int)(ed - st);
+	double avg = 0.0;
+	while (st < ed)
+	{
+		avg += *st++;
+		//count++;
+	}
+	avg /= (double)count;
+
+	return avg;
+}
+```
 
 
+### 📌 10.9 포인터 연산 총정리
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/*
+	Pointer operations
+	- Assignment
+	- Value finding (deferencing)
+	- Taking a pointer address
+	- Adding an integer to a pointer
+	- Incrementing a pointer
+	- Subtracting an integer from a pointer
+	- Decrementing a pointer
+	- Differencing
+	- Comparisons
+	*/
+
+	int arr[5] = { 100, 200, 300, 400, 500 };
+	int* ptr1, * ptr2, * ptr3;  // <<<- int type에 대한 주소를 가리키고 있음.
+
+	// 배열 변수는 배열 이름 자체가 첫번째 주소처럼 작동
+	// 동적 할당에서 편하게 받아들일 수 있도록.
+	ptr1 = arr;		// Assignment
+
+	// *포인터 : 역참조 -> 주소를 통해 값에 접근한다.
+	// 포인터 변수도 주소 값을 저장하기 위한 주소를 갖고 있음. (포인터도 변수다.)
+	printf("%p %d %p\n", ptr1, *ptr1, &ptr1);// dereferencing, Taking a pointer address
+
+	// 배열의 idx에 해당하는 주소 값
+	ptr2 = &arr[2];	// Address-of operator &
+	printf("%p %d %p\n", ptr2, *ptr2, &ptr2);
+
+	// int * 4 만큼 주소 값에 더하기.
+	ptr3 = ptr1 + 4;// Adding an integer from a pointer
+	printf("%p %d %p\n", ptr3, *ptr3, &ptr3);
+
+	//포인터의 차이 측정 : Differencing
+	printf("@@@@@td : %td\n", ptr3 - ptr1);	//Note: t is for pointer difference
+
+	ptr3 = ptr3 - 4;// Subtracing an integer from a pointer
+	printf("%p %d %p\n", ptr3, *ptr3, &ptr3);
+
+	// postfix, prefix.
+	ptr1++;			// Incrementing, ptr1 = ptr1 + 1
+	ptr1--;			// Decrementing
+	--ptr1;
+	++ptr1;
+
+	if (ptr1 == ptr3)
+		printf("Same\n");
+	else
+		printf("Different\n");
+
+	// 자료형에 관계없이 모든 포인터의 크기는 동일
+	// 비교는 할 수 있지만, warning을 띄워준다.
+	double d = 3.14;
+	double* ptr_d = &d;
+	if (ptr1 == ptr_d)	// warning C4133: '==': incompatible types - from 'double *' to 'int *'
+		printf("Same\n");
+	else
+		printf("Different\n");
+
+	return 0;
+}
+```
 
 
-
-
-
-
-
-
-
-
-
-
-
+### 📌 10.10 const와 배열과 포인터
 
 
 
