--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -493,11 +493,222 @@ int main()
 
 
 ### 📌 10.10 const와 배열과 포인터
+- 배열과 포인터의 인덱싱이 같은 이유  
+  배열과 포인터의 인덱싱은 메모리에서 특정 요소의 위치를 계산하는 방식이 동일하기 때문입니다.  
+  arr[i]는 사실 *(arr + i)로 변환, pd[i]도 사실 *(pd + i)로 변환.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	// 한정자
+	// type qualifiers(자격 부여): const, volatile, ... 
+
+	// 값을 고정.
+	//const double PI = 3.14159;
+	//PI = 2.14159;  // error C2166: l-value specifies const object
+
+	//const int arr[5] = { 1, 2, 3, 4, 5 };
+	값
+``` c
+#include <stdio.h>
+
+void print_array(const int arr[], const int n)
+{
+	for (int i = 0; i < n; ++i)
+		printf("%d ", arr[i]);
+	printf("\n");
+}
+
+void add_value(int arr[], const int n, const int val)
+{
+	int i;
+	for (i = 0; i < n; i++)
+		arr[i] += val;
+}
+
+int sum(const int ar[], const int n)
+{
+	int i;
+	int total = 0;
+
+	for (i = 0; i < n; i++)
+		total += ar[i];	// wrong implementation
+
+	return total;
+}
+
+int main()
+{
+	const int arr[] = { 1, 2, 3, 4, 5 };
+	const int n = sizeof(arr) / sizeof(arr[0]);
+
+	print_array(arr, 5);
+	add_value(arr, 5, 100);
+	print_array(arr, 5);
+
+	int s = sum(arr, n);
+
+	printf("sum is %d\n", s);
+	print_array(arr, 5);
+
+	return 0;
+}
+```
+
+
+### 📌 10.11 배열 매개변수와 const
+``` c
+#include <stdio.h>
+
+void print_array(const int arr[], const int n)
+{
+	for (int i = 0; i < n; ++i)
+		printf("%d ", arr[i]);
+	printf("\n");
+}
+
+void add_value(int arr[], const int n, const int val)
+{
+	int i;
+	for (i = 0; i < n; i++)
+		arr[i] += val;
+}
+
+int sum(const int ar[], const int n)
+{
+	int i;
+	int total = 0;
+
+	for (i = 0; i < n; i++)
+		total += ar[i];	// wrong implementation
+
+	return total;
+}
+
+int main()
+{
+	const int arr[] = { 1, 2, 3, 4, 5 };
+	const int n = sizeof(arr) / sizeof(arr[0]);
+
+	print_array(arr, 5);
+	add_value(arr, 5, 100);
+	print_array(arr, 5);
+
+	int s = sum(arr, n);
+
+	printf("sum is %d\n", s);
+	print_array(arr, 5);
+
+	return 0;
+```
+
+
+### 📌 10.12 포인터에 대한 포인터(2중 포인터)의 작동 원리
+
+<img width="350" src="https://github.com/user-attachments/assets/0a03052b-ad4e-4dbd-8083-1252c6405099"/>
+
+
+### 📌 10.13 포인터의 배열과 2차원 배열
+
+<img width="450" src="https://github.com/user-attachments/assets/f877b482-8405-461c-aed7-5fd7b92b46c6"/>
+<img width="450" src="https://github.com/user-attachments/assets/ea2d6254-bd56-402a-b5f3-1bf6b0818428"/>
+
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/* Two of 1D arrays */
+	// 포인터의 배열을 사용.
+	int arr0[3] = { 1, 2, 3 };
+	int arr1[3] = { 4, 5, 6 };
+
+	int* parr[2] = { arr0, arr1 };	// an array of pointers
+
+	for (int j = 0; j < 2; ++j)
+	{
+		for (int i = 0; i < 3; ++i)
+			printf("%d(==%d, %d) ", parr[j][i], *(parr[j] + i), (*(parr + j))[i]);
+		printf("\n");
+	}
+	printf("\n");
+
+
+	/* 2D arrays are arrays of 1D arrays */
+	// 포인터 2개를 사용.
+	int arr[2][3] = { {1, 2, 3}, {4, 5, 6} };
+
+	int *parr0 = arr[0];
+	int *parr1 = arr[1];
+
+	for (int i = 0; i < 3; ++i)
+		printf("%d ", parr0[i]);
+	printf("\n");
+
+	for (int i = 0; i < 3; ++i)
+		printf("%d ", parr1[i]);
+	printf("\n");
+
+
+	///* arrays of pointers works like a 2D array */
+	//int arr[2][3] = { {1, 2, 3}, {4, 5, 6} };
+	//// 1)
+	////int* parr[2] = { arr[0], arr[1] };
+	//// 2)
+	//int* parr[2];
+	//parr[0] = arr[0];
+	//parr[1] = arr[1];
+
+	//for (int j = 0; j < 2; ++j)
+	//{
+	//	for (int i = 0; i < 3; ++i)
+	//		printf("%d %d %d %d\n",
+	//			arr[j][i], parr[j][i], *(parr[j] + i), *(*(parr + j) + i));
+	//	printf("\n");
+	//}
+	//printf("\n");
 
 
 
+	// 포인터의 배열과 진짜 배열의 차이
+	/* 
+		Notes
+		- parr[0] and parr[1] do not point valid memory by default
+		- &parr[0] != &arr[0]
+	  - &parr[0] != parr[0] but &arr[0] == arr[0]
+	*/
+	printf("%p\n", &parr[0]);	// =/ parr[0]
+	printf("%p\n", arr);		// = &arr[0]   주소를 저장하는 별도의 메모리 공간을 갖지 않고, c 문법에서 지원하는 것일 뿐이다.
+	                            //             address of array name is equal to the address of the first element (KNN)
+	printf("%p\n", arr[0]);
+	printf("%p\n", &arr[0][0]);
 
 
+	/* Array of string of diverse lengths example */
+
+	char* name[] = { "Aladdin", "Jasmine", "Magic Carpet", "Genie" };
+
+	const int n = sizeof(name) / sizeof(char*);
+
+	for (int i = 0; i < n; ++i)
+		printf("%s at %u\n", name[i], (unsigned)name[i]);// Use ull in x64 build
+	printf("\n");
+
+	char aname[][15] = { "Aladdin", "Jasmine", "Magic Carpet", "Genie", "Jafar" };
+
+	const int an = sizeof(aname) / sizeof(char[15]);
+
+	for (int i = 0; i < an; ++i)
+		printf("%s at %u\n", aname[i], (unsigned)&aname[i]);// Use ull in x64 build
+	printf("\n");
+
+	return 0;
+}
+```
+
+
+### 📌 10.14 2차원 배열과 포인터
 
 
 
