--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -493,8 +493,7 @@ int main()
 
 
 ### 📌 10.10 const와 배열과 포인터
-- 배열과 포인터의 인덱싱이 같은 이유  
-  배열과 포인터의 인덱싱은 메모리에서 특정 요소의 위치를 계산하는 방식이 동일하기 때문입니다.  
+- 배열과 포인터의 인덱싱이 같은 이유는, 메모리에서 특정 요소의 위치를 계산하는 방식이 동일하기 때문  
   arr[i]는 사실 *(arr + i)로 변환, pd[i]도 사실 *(pd + i)로 변환.
 ``` c
 #include <stdio.h>
