--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -605,7 +605,7 @@ int main()
 
 ### 📌 10.12 포인터에 대한 포인터(2중 포인터)의 작동 원리
 
-<img width="350" src="https://github.com/user-attachments/assets/0a03052b-ad4e-4dbd-8083-1252c6405099"/>
+<img width="450" src="https://github.com/user-attachments/assets/0a03052b-ad4e-4dbd-8083-1252c6405099"/>
 
 
 ### 📌 10.13 포인터의 배열과 2차원 배열
@@ -708,6 +708,243 @@ int main()
 
 
 ### 📌 10.14 2차원 배열과 포인터
+- 메모리에 저장된 순서대로 읽는 것이 자연스럽다.
+
+<img width="400" src="https://github.com/user-attachments/assets/270cb330-07b4-4ba4-be36-30d60f4ec5ea"/>
+
+``` c
+#include <stdio.h>
+
+int main()
+{
+	float arr2d[2][4] = { {1.0f, 2.0f, 3.0f, 4.0f}, {5.0f, 6.0f, 7.0f, 8.0f} };
+
+	printf("%u\n", (unsigned)arr2d);		// Use unsigned long long in x64
+	printf("%u\n", (unsigned)arr2d[0]);
+	printf("\n");
+
+	// &arr2d[0] <- 이 주소가 담겨있는 메모리 공감을 찾는게 아니라, arr2d[0] 배열의 주소를 알려주는 것 뿐.
+	// 하지만 포인터의 배열에서 가리키고 있는 경우에는 그 포인터의 주소를 알려줌.
+
+	// arr2d points to arr2d[0] (not arr2d[0][0]), KNK Ch. 12.4
+	// arr2d는 arr2d[0]는 주소와 같다. arr2d[0][0]은 값이고.
+	
+	printf("%u\n", (unsigned)* arr2d);
+	printf("%u\n", (unsigned)& arr2d[0]);	// C language allows this
+	printf("%u\n", (unsigned)& arr2d[0][0]);
+	printf("%f %f\n", arr2d[0][0], **arr2d);
+	printf("\n");
+
+	printf("%u\n", (unsigned)(arr2d + 1));
+	printf("%u\n", (unsigned)(&arr2d[1]));
+	printf("%u\n", (unsigned)(arr2d[1]));
+	printf("%u\n", (unsigned)(*(arr2d + 1)));
+	printf("%u\n", (unsigned)(&arr2d[0] + 1));
+	printf("%u\n", (unsigned)(&arr2d[1][0]));
+	printf("\n");
+
+	printf("%f\n", *(*(arr2d + 1) + 2));
+	printf("\n");
+
+	for (int j = 0; j < 2; ++j)
+	{
+		printf("[%d] = %u, %u\n", j, (unsigned)(arr2d[j]), (unsigned) * (arr2d + j));
+
+		for (int i = 0; i < 4; ++i)
+		{
+			printf("[%d][%d] = %f, %f\n", j, i, arr2d[j][i], *(*(arr2d + j) + i));
+
+			*(*(arr2d + j) + i) += 1.0f;// arr2d[j][i] += 1.0f;
+		}
+	}
+	printf("\n");
+
+	/*
+	3864940
+	3864940
+
+	3864940
+	3864940
+	3864940
+	1.000000 1.000000
+
+	3864956
+	3864956
+	3864956
+	3864956
+	3864956
+	3864956
+
+	7.000000
+
+	[0] = 3864940, 3864940
+	[0][0] = 1.000000, 1.000000
+	[0][1] = 2.000000, 2.000000
+	[0][2] = 3.000000, 3.000000
+	[0][3] = 4.000000, 4.000000
+	[1] = 3864956, 3864956
+	[1][0] = 5.000000, 5.000000
+	[1][1] = 6.000000, 6.000000
+	[1][2] = 7.000000, 7.000000
+	[1][3] = 8.000000, 8.000000
+	*/
+
+
+
+	/* Pointers to Multidimensional Arrays */
+
+	float arr2d[2][4] = { {1.0f, 2.0f, 3.0f, 4.0f}, {5.0f, 6.0f, 7.0f, 8.0f} };
+
+	float (*pa)[4];	// a SINGLE pointer to an array of 4 floats
+	float* ap[2];	// an array of TWO pointers-to-float
+
+	printf("%zu\n", sizeof(pa));	// 8 in x64
+	printf("%zu\n", sizeof(ap));	// 16 in x64
+	printf("\n");
+
+	pa = arr2d;
+	//pa[0] = arr2d[0]; // error
+	//pa[1] = arr2d[1]; // error
+
+	//ap = arr2d;		// error
+	ap[0] = arr2d[0];
+	ap[1] = arr2d[1];
+
+	printf("%u %u\n", (unsigned)pa, (unsigned)(pa + 1));
+	printf("%u %u\n", (unsigned)arr2d[0], (unsigned)arr2d[1]);
+	printf("%u %u\n", (unsigned)pa[0], (unsigned)(pa[0] + 1));
+	printf("%f\n", pa[0][0]);
+	printf("%f\n", *pa[0]);
+	printf("%f\n", **pa);
+	printf("%f\n", pa[1][3]);
+	printf("%f\n", *(*(pa + 1) + 3));
+	printf("\n");
+
+	printf("%u %u\n", (unsigned)ap, (unsigned)(ap + 1));
+	printf("%u %u\n", (unsigned)arr2d[0], (unsigned)arr2d[1]);
+	printf("%u %u\n", (unsigned)ap[0], (unsigned)(ap[0] + 1));
+	printf("%f\n", ap[0][0]);
+	printf("%f\n", *ap[0]);
+	printf("%f\n", **ap);
+	printf("%f\n", ap[1][3]);
+	printf("%f\n", *(*(ap + 1) + 3));
+
+	/*
+	4
+	8
+
+	11532572 11532588
+	11532572 11532588
+	11532572 11532576
+	1.000000
+	1.000000
+	1.000000
+	8.000000
+	8.000000
+
+	11532544 11532548
+	11532572 11532588
+	11532572 11532576
+	1.000000
+	1.000000
+	1.000000
+	8.000000
+	8.000000
+	*/
+
+	return 0;
+}
+```
+
+
+### 📌 10.15 포인터의 호환성(Compatibility)
+- int (\*pa)[3]와 int* p의 차이는 NumPy에서 (3,)와 (1,3)의 차이와 비슷한 개념입니다.  
+  <img width="500" src="https://github.com/user-attachments/assets/46efd4f6-1c73-4f73-a84a-2bcc1546417c"/>
+
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/* Pointer Compatibility */
+	int n = 5;
+	double x;
+	x = n;		// no error
+	int* p1 = &n;
+	double* pd = &x;
+	// pd = p1;	// (호환이 안되는 타입 경고) warning C4133: '=': incompatible types - from 'int *' to 'double *'
+
+
+	int* pt;	// 포인터
+	int(*pa)[3];// 3개짜리 포인터
+	int ar1[2][3] = { 3, };
+	int ar2[3][2] = { 7, };
+	int** p2;		// a pointer to a pointer
+
+	pt = &ar1[0][0];	// pointer-to-int
+
+	pt = ar1[0];		// pointer-to-int;
+	
+	//pt = ar1;			// Warning (Error)
+	
+	pa = ar1;			// pointer-to-int[3]
+	//pa = ar2;			// Warning or error
+
+	p2 = &pt;			// pointer-to-int *
+	*p2 = ar2[0];		// pointer-to-int
+	//p2 = ar2;			// Warning (Error)
+	//Notes
+	// - p2: pointer to pointer to int
+	// - ar2: a pointer to array-of-2-ints
+
+
+	/* Pointer and const */
+	int x = 20;
+	const int y = 23;
+	int* p1 = &x;
+	const int* p2 = &y;
+	const int** pp2 = &p1;
+	//p1 = p2;		// Warning (Error)
+
+	//네, const int* p2는 "포인터가 가리키는 값이 const라서 변경할 수 없지만, 포인터 자체는 변경할 수 있다"는 의미입니다.
+	//즉, * p2 = 값; 은 불가능하지만, p2 = 다른 주소; 는 가능합니다.
+
+	//*p2 = 123;	// Error
+	p2 = p1;
+
+	int x2 = 30;
+	int* p3 = &x2;
+	*pp2 = p3;
+	pp2 = &p1;
+
+	const int** pp2;
+	int* p1;
+	const int n = 13;
+	pp2 = &p1;		// const?
+	*pp2 = &n;		// sets p1 to point at n
+	*p1 = 10;		// change n
+
+
+	/* C const and C++ const */
+	const int y;
+	const int* p2 = &y;
+	int* p1;
+	p1 = p2;	// warning (error in cpp)
+
+	return 0;
+}
+```
+
+
+### 📌 
+
+
+
+
+
+
+
+
 
 
 
