--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -936,18 +936,214 @@ int main()
 ```
 
 
-### 📌 
+### 📌 10.16 다차원 배열을 함수에게 전달해주는 방법
+``` c
+#include <stdio.h>
+
+#define ROWS 3
+#define COLS 4
+
+//C에서 다차원 배열을 함수의 매개변수로 전달할 때, 첫 번째 차원(행 크기)은 생략할 수 있지만, 두 번째 차원(열 크기)은 반드시 명시해야 합니다.
+int sum2d_1(int ar[ROWS][COLS]);
+int sum2d_2(int ar[][COLS], int row);
+//int sum2d_2(int [][COLS], int row);
+//int sum2d_2(int (*ar)[COLS], int row);// ar is a SINGLE pointer to the array of COLS ints
+int sum2d_3(int* ar, int row, int col);
+//int sum2d_3(int*, int, int);
+
+int main()
+{
+	//int a = 3;
+	//int arr[a];
+
+	int data[ROWS][COLS] = {
+								{1, 2, 3, 4},
+								{5, 6, 7, 8},
+								{9, 0, 1, 2}
+	};
+	printf("%d\n", data[2][3]);
+
+	int* ptr = &data[0][0];
+	printf("%d\n", *(ptr + 3 + COLS * 2));
+
+	printf("Sum of all elements = %d\n", sum2d_1(data));
+	printf("Sum of all elements = %d\n", sum2d_2(data, ROWS));
+	printf("Sum of all elements = %d\n", sum2d_3(&data[0][0], ROWS, COLS));
+
+	return 0;
+}
+
+int sum2d_1(int ar[ROWS][COLS])
+{
+	int r, c, tot = 0;
+	for (r = 0; r < ROWS; r++)
+		for (c = 0; c < COLS; c++)
+			tot += ar[r][c];
+	return tot;
+}
+
+int sum2d_2(int ar[][COLS], int row)
+{
+	int r, c, tot = 0;
+	for (r = 0; r < row; r++)
+		for (c = 0; c < COLS; c++)
+			tot += ar[r][c];
+	return tot;
+}
+
+int sum2d_3(int* ar, int row, int col)
+{
+	int r, c, tot = 0;
+	for (r = 0; r < row; r++)
+		for (c = 0; c < col; c++)
+			tot += *(ar + c + col * r);	//ar[c + col * r]
+	return tot;
+}
+
+/*
+	In higher dimensions,
+	you may omit the value in the left-most bracket
+
+	int my_function(int ar[][3][5][8], int rows);
+	int my_function(int (*ar)[][3][5][8], int rows);
+*/
+```
 
 
+### 📌 10.17 변수로 길이를 정할 수 있는 배열(Variable-Length Arrays (VLAs))
+- Visual Studio에서 미지원. (온라인 컴파일러에서.)  
+  <img width="350" src="https://github.com/user-attachments/assets/03e9ec22-5ce3-4054-ad5d-0619b7a0aa1f"/>
+
+``` c
+#include <stdio.h>
+
+int main()
+{
+
+	return 0;
+}
+
+//#define _CRT_SECURE_NO_WARNINGS   //Not necessary
+#include <stdio.h>
+
+#define ROWS 3
+#define COLS 4
+
+int sum2d_2(int ar[][COLS], int row)
+{
+	int r, c, tot = 0;
+	for (r = 0; r < row; r++)
+		for (c = 0; c < COLS; c++)
+			tot += ar[r][c];
+	return tot;
+}
+
+int sum2d_3(int* ar, int row, int col)
+{
+	int r, c, tot = 0;
+	for (r = 0; r < row; r++)
+		for (c = 0; c < col; c++)
+			tot += *(ar + c + col * r);	//ar[c + col * r]
+	return tot;
+}
+
+int sum2d_4(int row, int col, int ar[row][col])
+{
+	//printf("%zd\n", sizeof(ar));
+	//printf("%zd\n", sizeof(ar[0]));
+	int r, c, tot = 0;
+	for (r = 0; r < row; r++)
+		for (c = 0; c < col; c++)
+			tot += ar[r][c];
+	return tot;
+}
+
+int main()
+{
+	int n;
+
+	printf("Input array length : ");
+	scanf("%d", &n);
+
+	float my_arr[n];//Note: cannot change length after declaration
+
+	for (int i = 0; i < n; ++i)
+		my_arr[i] = (float)i;
+
+	for (int i = 0; i < n; ++i)
+		printf("%f\n", my_arr[i]);
 
 
+	int data[ROWS][COLS] = {
+								{1, 2, 3, 4},
+								{5, 6, 7, 8},
+								{9, 0, 1, 2}
+	};
+
+	printf("%d\n", sum2d_4(ROWS, COLS, data));
+
+	return 0;
+}
+```
 
 
+### 📌 10.18 복합 리터럴과 배열(Compound Literal)
+``` c
+#include <stdio.h>
 
+#define COLS 4
 
+int sum_1d(int arr[], int n);
+int sum_2d(int arr[][COLS], int rows);
 
+int main()
+{
+	int a = 1;
+	3;		// Literals are constants that aren't symbolic
+	3.14f;
+	int b[2] = { 3, 4 };
+	(int[2]) {3, 4};		// compound literal
 
+	//int c[2] = (int[2]){ 3, 4 }; // Error
 
+	int arr1[2] = { 1, 2 };
+	int arr2[2][COLS] = { {1, 2, 3, 4}, {5, 6, 7, 8} };
 
+	printf("%d\n", sum_1d(arr1, 2));
+	printf("%d\n", sum_2d(arr2, 2));
+	printf("\n");
 
+	printf("%d\n", sum_1d((int[2]) { 1, 2 }, 2));
+	printf("%d\n", sum_2d((int[2][COLS]) { { 1, 2, 3, 4 }, { 5, 6, 7, 8 } }, 2));
+	printf("\n");
 
+	int* ptr1;
+	int(*ptr2)[COLS];
+
+	ptr1 = (int[2]){ 1, 2 };
+	ptr2 = (int[2][COLS]){ {1, 2, 3, 4}, { 5, 6, 7, 8 } };
+
+	printf("%d\n", sum_1d(ptr1, 2));
+	printf("%d\n", sum_2d(ptr2, 2));
+	printf("\n");
+
+	return 0;
+}
+
+int sum_1d(int arr[], int n)
+{
+	int total = 0;
+	for (int i = 0; i < n; ++i)
+		total += arr[i];
+	return total;
+}
+
+int sum_2d(int arr[][COLS], int rows)
+{
+	int total = 0;
+	for (int r = 0; r < rows; r++)
+		for (int c = 0; c < COLS; c++)
+			total += arr[r][c];
+	return total;
+}
+```
