--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -1147,3 +1147,46 @@ int sum_2d(int arr[][COLS], int rows)
 	return total;
 }
 ```
+
+
+### 📌 복습 중에..
+
+<img width="500" src="https://github.com/user-attachments/assets/585def2d-df9d-4507-a865-549d76ca2b17"/>
+
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int arr[2][3] = { {1, 2, 3},{4, 5, 6} };
+	//int arr[2][3] = { {1, },{6} };
+
+	//printf("%zd ", sizeof(arr));
+	//printf("%zd ", sizeof(arr[0][0]));
+	//printf("%zd ", sizeof(arr)/sizeof(arr[0][0]));
+	//printf("\n");
+
+	//// row
+	//printf("%zd ", sizeof(arr));
+	//printf("%zd ", sizeof(arr[0]));
+	//printf("%zd ", sizeof(arr) / sizeof(arr[0]));
+	//printf("\n");
+	int row = (int)(sizeof(arr) / sizeof(arr[0]));
+
+	//// col
+	//printf("%zd ", sizeof(arr[0]));
+	//printf("%zd ", sizeof(arr[0][0]));
+	//printf("%zd ", sizeof(arr[0]) / sizeof(arr[0][0]));
+	//printf("\n");
+	int col = (int)(sizeof(arr[0]) / sizeof(arr[0][0]));
+
+	for (int j = 0; j < row; ++j)
+	{
+		for (int i = 0; i < col; ++i)
+			printf("%d ", *(*(arr + j) + i));
+		printf("\n");
+	}
+
+	return 0;
+}
+```
