--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -708,7 +708,9 @@ int main()
 
 
 ### 📌 10.14 2차원 배열과 포인터
-- 메모리에 저장된 순서대로 읽는 것이 자연스럽다.
+
+<img width="550" src="https://github.com/user-attachments/assets/cebdaadd-f2fa-403b-b7f9-bd23a95a2b54"/>
+<img width="550" src="https://github.com/user-attachments/assets/cbdfae48-e35d-4911-9507-0ad77e23965d"/>
 
 <img width="400" src="https://github.com/user-attachments/assets/270cb330-07b4-4ba4-be36-30d60f4ec5ea"/>
 
