--- a/C/10.0_array_and_pointer.md
+++ b/C/10.0_array_and_pointer.md
@@ -1192,3 +1192,4 @@ int main()
 	return 0;
 }
 ```
+<img width="400" src="https://github.com/user-attachments/assets/5cc6527b-8dca-4aa4-ba5a-d0138aae97d0"/>
