--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -218,4 +218,218 @@ int main()
 ```
 
 
+### 📌 11.3 문자열의 배열
+- 실행파일에 저장되어 있던 프로그램이 실제로 실행되기 위해서는 먼저 메모리로 복사되어야 한다.
+
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/* Arrays of Character Strings */
+
+	const char* mythings[5] = {
+		"Dancing in the rain",
+		"Couting apples",
+		"Watching movies with friends",
+		"Writing sad letters",
+		"Studying the C language",
+	};
+
+  	// 프로그램의 일부로써 저장이 되어 있다가(DATA segment, TEXT segment)
+        // 배열이 stack에 메모리를 갖고 있는 곳에 copy됨
+	char yourthings[5][40] = {
+		"Studying the C++ language",
+		"Eating",
+		"Watching Netflix",
+		"Walking around till dark",
+		"Deleting spam emails"
+	};
+
+	const char* temp1 = "Dancing in the rain";
+	const char* temp2 = "Studying the C++ language";
+
+	printf("%s %u %u\n", mythings[0], (unsigned)mythings[0], (unsigned)temp1);
+	printf("%s %u %u\n", yourthings[0], (unsigned)yourthings[0], (unsigned)temp2);  // 여기 주소 두개만 다르다.
+	//printf("%u %u\n", (unsigned)&yourthings[0][0], (unsigned)temp2);
+	printf("\n");
+
+	printf("%-30s %-30s\n", "My Things:", "Your Things:");
+	for (int i = 0; i < 5; i++)
+		printf("%-30s %-30s\n", mythings[i], yourthings[i]);
+
+	printf("\nsizeof mythings: %zd, sizeof your yourthings: %zd\n",
+		sizeof(mythings), sizeof(yourthings));  // 20 (포인터 사이즈), 200 (메모리 전체 사이즈)
+
+	// data segment안에 read only memory 안에 있는 mythings[0][0]부터 쭉 출력
+	for (int i = 0; i < 100; i++)
+		printf("%c", mythings[0][i]);
+	printf("\n");
+	printf("\n");
+
+	for (int i = 0; i < 200; i++)
+		printf("%d", (int)yourthings[0][i]);
+	printf("\n");
+	printf("\n");
+
+	for (int i = 0; i < 200; i++)
+		printf("%c", yourthings[0][i]);
+	printf("\n");
+	printf("\n");
+
+	// Not a good idea to take advantage of this property
+
+	return 0;
+}
+```
+
+
+### 📌 11.4 문자열을 입력받는 다양한 방법들
+<img width="250" alt="image" src="https://github.com/user-attachments/assets/60dd5406-a614-4749-8412-aa977f93b46b" />
+
+- scanf() vs gets()  
+  fgets() and fputs()  
+  puts는 \n이 자동 추가되지만,  
+  fgets는 stdin 입력시 곧이곧대로 \n까지 받아간다. fputs는 \n이 추가되지 않는다. 주의.
+
+``` c
+#include <stdio.h>
+
+#define STRLEN 81
+
+char* custom_string_input(char* st, int n);
+
+int main()
+{
+	/* Creating Space */
+	//char* name = "";	// Error at RUN-TIME
+	char name[128];
+	int result = scanf("%s", name);  // %s에 넣는건 주소(포인터) !!!
+
+
+
+	/*
+		scanf() vs gets()
+		scanf() reads one word
+		gets() reads one line and removes \n and add \0
+	*/
+
+	char words[5] = "";	// Warning without initialization
+	// 포인터 하나만 argument로 받는 함수들의 공통점은, 어디서 끝나는지는 모른다.
+	// 그걸 보완하기 위해서 gets_s가 C11에서 추가되었다.
+	//gets(words);		// gets receives pointer. No idea when string ends.
+	gets_s(words, sizeof(words));		// C11
+	//int result = scanf("%s", words);
+	printf("START\n");
+	printf("%s", words);	// no \n at the end
+	puts(words);			// 자동 줄바꿈 해준다. puts() adds \n at the end
+	puts("END.");
+
+	// TODO: try char words[5]; -> runtime error !!! (cause, 버퍼 오버플로우)
+
+
+	
+	/*
+	fgets() and fputs()
+	fgets는 언제 끝날지 모른다는 생각을 하고 받아들여서 문제가 없이 종료된다.(?)
+	stdin(스탠다드 입력)을 넣으면 표준 입력(키보드)에서 문자열을 읽어올 수 있으며,
+	개행 문자(\n)도 저장됨. 사용자가 엔터(Enter)를 치면 \n도 문자열에 포함됨.
+	10글자 입력해도 마지막 글자는 잘리고, \0이 자동 추가.
+	*/
+
+	char words[STRLEN] = "";
+	fgets(words, STRLEN, stdin);	// does NOT remove \n
+
+	// TODO: replace '\n' with '\0'
+	int i = 0;
+	while (words[i] != '\n' && words[i] != '\0')
+		i++;
+	if (words[i] == '\n')
+		words[i] = '\0';
+
+	fputs(words, stdout);			// does NOT add \n
+	fputs("END", stdout);
+
+
+
+	/* Small array */
+	// fgets가 정상적으로 값을 받았을 때 반환 값은 주소,
+	// EOF(ex. ctrl+z)를 받았을 때 반환 값은 NULL (00000000)
+
+	char small_array[5];
+	puts("Enter long strings:");  // 1234567890
+	//fgets(small_array, 5, stdin);	// FILE *_Stream
+	printf("%p\n", small_array);
+	printf("%p\n", fgets(small_array, 5, stdin));	// Return value of fgets()
+	fputs(small_array, stdout);  // 1234
+
+
+
+	/* Repeating short reading */
+	char small_array[5];
+	puts("Enter long strings:");
+	while (fgets(small_array, 5, stdin) != NULL && small_array[0] != '\n')
+		fputs(small_array, stdout);
+		//puts(small_array);	// What if we use puts()
+
+
+
+	/* scanf() */
+	char str1[6], str2[6];
+	int count = scanf("%5s %5s", str1, str2);
+	int count = scanf("%6s %6s", str1, str2);	// -1개 인 것 기억! run-time error
+	int count = scanf_s("%5s %5s", str1, 6, str2, 6);  // pointer, size
+	printf("%s|%s \n", str1, str2);
+
+
+
+	/* An example of custom input function */
+	char word[11];
+	puts(custom_string_input(word, 11));
+
+	return 0;
+}
+
+/*
+int i = 0;
+while (words[i] != '\n' && words[i] != '\0')
+	i++;
+if (words[i] == '\n')
+	words[i] = '\0';
+*/
+
+char* custom_string_input(char* st, int n)
+{
+	char* ret_ptr;
+	int i = 0;
+
+	ret_ptr = fgets(st, n, stdin);
+	if (ret_ptr)
+	{
+		while (st[i] != '\n' && st[i] != '\0')
+			i++;
+		if (st[i] == '\n')
+			st[i] = '\0';
+		else
+			while (getchar() != '\n')	// clear buffer
+				continue;
+	}
+	return ret_ptr;
+}
+```
+
+
+### 📌 11.5 문자열을 출력하는 다양한 방법들
+
+
+
+
+
+
+
+
+
+
+
+
 
