--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -310,7 +310,7 @@ int main()
 
 	/*
 		scanf() vs gets()
-		scanf() reads one word
+		scanf() (입력을 받고 자동으로 \0 추가되기 때문에) reads one word
 		gets() reads one line and removes \n and add \0
 	*/
 
