--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -287,10 +287,10 @@ int main()
 ### 📌 11.4 문자열을 입력받는 다양한 방법들
 <img width="250" alt="image" src="https://github.com/user-attachments/assets/60dd5406-a614-4749-8412-aa977f93b46b" />
 
-- scanf() vs gets()  
-  fgets() and fputs()  
-  puts는 \n이 자동 추가되지만,  
-  fgets는 stdin 입력시 곧이곧대로 \n까지 받아간다. fputs는 \n이 추가되지 않는다. 주의.
+- scanf() : 공백(space), 개행(\n) 전까지 한 단어만 입력받음.  
+  gets() : 공백 포함 한 줄 입력받음. (마지막에 자동으로 \n 삭제, \0 넣어줌.) (버퍼 오버플로우 위험으로, -> fgets())  
+  fgets() : 공백 포함 문자열을 입력받음 (개행 문자(\n)도 저장됨).  
+  fputs() : 문자열을 출력하지만 \n을 자동 추가하지 않음. 
 
 ``` c
 #include <stdio.h>
@@ -310,7 +310,7 @@ int main()
 
 	/*
 		scanf() vs gets()
-		scanf() (scanf("%s", str);를 사용하면 공백 전까지만 문자열을 입력받아서) reads one word
+		scanf() (공백 전까지만 문자열을 입력받아서) reads one word
 		gets() reads one line and removes \n and add \0
 	*/
 
