--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -291,7 +291,30 @@ int main()
   gets() : 공백 포함 한 줄 입력받음. (마지막에 자동으로 \n 삭제, \0 넣어줌.) (버퍼 오버플로우 위험으로, -> fgets())  
   fgets() : 공백 포함 문자열을 입력받음 (개행 문자(\n)도 저장됨).  
   fputs() : 문자열을 출력하지만 \n을 자동 추가하지 않음. 
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
 
+int main()
+{
+	char c[10];
+	
+	scanf("%s", &c);  // 123 456\n
+	printf("%s", c);  // 123
+
+	char d[10];
+
+	gets(d);  // 123 456\n
+	puts(d);  // 123 456\n  <- overflow 우려.
+
+	char e[10];
+
+	fgets(e, 10, stdin);  // 123 456\n
+	fputs(e, stdout);  // 123 456\n
+
+	return 0;
+}
+```
 ``` c
 #include <stdio.h>
 
