--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -449,11 +449,110 @@ char* custom_string_input(char* st, int n)
 
 
 ### 📌 11.5 문자열을 출력하는 다양한 방법들
+- 여러가지 데이터 형태가 섞여있을 때 scanf가 편하다. (buffer에 있는 문자열을 알아서 읽어옴)
+``` c
+#include <stdio.h>
+
+#define TEST "A string from #define."
+
+/*
+	puts() which doesn't add a new line at the end
+	Use pointer increment operator and putchar()
+*/
+void custom_put(const char* str);	// Only two lines
+int  custom_put2(const char* str);	// Add \n, return # of characters
+
+int main()
+{
+
+	/*
+		puts() : add \n at the end
+	*/
+
+	char str[60] = "String array initialized";
+	const char* ptr = "A pointer initialized";
+
+	puts("String without \\n");  // String without \n
+	puts("END");			// END
+	puts(TEST);				// A string from #define.
+	puts(TEST + 5);			// ing from #define.
+	puts(&str[3]);			// ing array initialized
+	//puts(str[3]);// Error //
+	puts(ptr + 3);			// ointer initialized
 
 
+	/*
+		string without \0
+		""로 문자열을 감싸면 \0 (NULL)이 자동으로 추가가 되는데,
+		아래 처럼하면 NULL이 자동 추가가 안되서 문제가 있다.
+	*/
+
+	char str[] = { 'H', 'I', '!' };	// No \0 at the end.
+	puts(str);	// VS warns you!
 
 
+	/*
+		puts() and fputs()
+		원래 파일 출력하려고 사용하는 거.
+	*/
 
+	char line[100];
+	while (gets(line))	// while (gets(line) != NULL)
+		puts(line);
+
+	char line[100];
+	while (fgets(line, 100, stdin))  // EOF 전까지 무한반복.
+		fputs(line, stdout);
+
+
+	/*
+		printf()
+	*/
+
+	char str[] = "Just do it, do it!";
+	printf("%s\n", str);	// \n added
+	puts(str);				// \n no added
+
+	char input[100] = "";
+	int ret = scanf("%10s", input); // Input : "Just do it, do it!\n" (Note %10s)
+	printf("%s\n", input);			// Output : "Just"  <- 빈칸을 만나면 더이상 읽어들이지 않으므로.
+	ret = scanf("%10s", input);		// Reads remaning buffer
+	printf("%s\n", input);			// Output : "do"    <- 여러가지 데이터 형태가 섞여있을 때 scanf가 편하다.
+
+
+	/*
+		Custom function
+	*/
+
+	custom_put("Just ");
+	custom_put("Do it!");
+
+	printf("%d\n", custom_put2("12345"));
+
+	return 0;
+}
+
+void custom_put(const char* str)
+{
+	while (*str != '\0')
+		putchar(*(str++));
+}
+
+int  custom_put2(const char* str)
+{
+	int i = 0;
+	while (*str != '\0')
+	{
+		putchar(*(str++));
+		++i;
+	}
+	
+	return i;
+}
+```
+
+
+### 📌 
 
 
 
