--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -552,12 +552,116 @@ int  custom_put2(const char* str)
 ```
 
 
-### 📌 
+### 📌 11.6 다양한 문자열 함수들
+``` c
+#include <stdio.h>
+#include <string.h>
+
+void fit_str(char*, unsigned int);
+
+int main()
+{
+	/*
+		strlen() : 문자열의 길이 / returns length of the string
+		포인터로 넣어주기!
+	*/
+
+	//TODO: use debugger
+	char msg[] = "Just,"" do it!";
+	puts(msg);
+	printf("Length %d\n", strlen(msg));
+	fit_str(msg, 4);
+	puts(msg);
+	printf("Length %d\n", strlen(msg));
+	//TODO: implement fit_str() function
 
 
+	/*
+		strcat() and strncat() : 이어 붙이기 / string concatenation
+	*/
+
+	char str1[100] = "First string";
+	char str2[] = "Second string";
+
+	strcat(str1, ", ");  // First string, Second string
+	strcat(str1, str2);
+	strncat(str1, str2, 2);	// First stringSe / 두글자만 더해줘. Append 2 characters
+	puts(str1);
+
+	//TODO: implement my_strcat() function!
 
 
+	/*
+		strcmp() and strncmp() : compare strings (not characters)
+	*/
 
+	printf("%d\n", strcmp("A", "A"));					// 0 : same
+	printf("%d\n", strcmp("A", "B"));					// -1 : A가 B보다 앞에 있어서.
+	printf("%d\n", strcmp("B", "A"));					// 1
+	printf("%d\n", strcmp("Hello", "Hello"));			// 0
+	printf("%d\n", strcmp("Banana", "Bananas"));		// -1 : null < 's'
+	printf("%d\n", strcmp("Bananas", "Banana"));		// 1
+	printf("%d\n", strncmp("Bananas", "Banana", 6));	// 0 : same
+	//TODO: implement strcmp!
+
+
+	/*
+		strcpy() and strncpy()
+	*/
+
+	char dest[100] = "";	// make sure memory is enough
+	char source[] = "Start programming!";
+	//dest = source;	// 배열의 주소를 변경하려는 시도이므로 오류 발생.
+	//dest = "Start something";// Error
+	strcpy(dest, source);
+	strncpy(dest, source, 5);	// '\0' is NOT added
+	//strcpy(dest, source + 6);
+	//strcpy(dest, source);
+	//strcpy(dest + 6, "coding!");
+	puts(dest);
+
+
+	/*
+		sprintf()
+		printf를 string(문자열)에 해준다.
+		파일 이름을 자동으로 생성해야 할 때.
+	*/
+
+	char str[100] = "";
+	int i = 123;
+	double d = 3.14;
+	sprintf(str, "%05d.png %f", i, d);
+	puts(str);  // 00123.png 3.140000
+	// ex. capture00000.png, capture00001.png, ...
+
+
+	/*
+		There are more functions...
+	*/
+
+	// string character : 주어진 문자열에서 첫 번째로 나타나는 특정 문자를 찾고, 해당 문자가 포함된 포인터를 반환 = w부터 출력.
+	printf("%s\n", strchr("Hello, World", 'W'));	// World
+	// ABCDE 중 하나로 시작하는 곳부터 출력.
+	printf("%s\n", strpbrk("Hello, World", "ABCDE"));	// (null)
+	printf("%s\n", strpbrk("Hello, World", "abcde"));	// ello, World
+	// string reverse character : 문자열에서 마지막으로 나타나는 특정 문자를 찾고, 해당 문자가 포함된 포인터를 반환합니다.
+	printf("%s\n", strrchr("Hello, World, Hello, World", 'l'));	// ld
+	// 문자열 전체 비교
+	printf("%s\n", strstr("Hello, World", "wor"));	// (null)
+	printf("%s\n", strstr("Hello, World", "Wor"));	// World
+
+	return 0;
+}
+
+void fit_str(char* str, unsigned int size)
+{
+	if (strlen(str) > size)
+		str[size] = '\0';
+}
+```
+
+
+### 📌 11.7 선택 정렬 문제 풀이
 
 
 
