--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -286,11 +286,8 @@ int main()
 
 ### 📌 11.4 문자열을 입력받는 다양한 방법들
 <img width="250" alt="image" src="https://github.com/user-attachments/assets/60dd5406-a614-4749-8412-aa977f93b46b" />
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/2c677f98-5d85-4b23-bd99-ce911599c16e" />
 
-- scanf() : 공백(space), 개행(\n) 전까지 한 단어만 입력받음.  
-  gets() : 공백 포함 한 줄 입력받음. (마지막에 자동으로 \n 삭제, \0 넣어줌.) (버퍼 오버플로우 위험으로, -> fgets())  
-  fgets() : 공백 포함 문자열을 입력받음 (개행 문자(\n)도 저장됨).  
-  fputs() : 문자열을 출력하지만 \n을 자동 추가하지 않음. 
 ``` c
 #define _CRT_SECURE_NO_WARNINGS
 #include <stdio.h>
