--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -294,26 +294,26 @@ int main()
 
 int main()
 {
-	//char c[10];
-	//
-	//scanf("%s", &c);  // 123 456\n
-	//printf("%s", c);  // 123
+	char c[10];
+	
+	scanf("%s", &c);  // 123 456\n
+	printf("%s", c);  // 123
 
 
 
-	//char d[10];
+	char d[10];
 
-	//gets(d);  // 123 456\n
-	//puts(d);  // 123 456\n  <- overflow 우려.
+	gets(d);  // 123 456\n
+	puts(d);  // 123 456\n  <- overflow 우려.
 
-	//gets_s(d, 10);  // 123 456 789 0\n <<<-  runtime error
+	gets_s(d, 10);  // 123 456 789 0\n <<<-  runtime error
 
 
 
-	//char e[10];
+	char e[10];
 
-	//fgets(e, 10, stdin);  // 123 456\n
-	//fputs(e, stdout);  // 123 456\n
+	fgets(e, 10, stdin);  // 123 456\n
+	fputs(e, stdout);  // 123 456\n
 
 	return 0;
 }
