--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -659,6 +659,153 @@ void fit_str(char* str, unsigned int size)
 
 
 ### 📌 11.7 선택 정렬 문제 풀이
+- [www.geeksforgeeks.org/selection-sort](https://www.geeksforgeeks.org/selection-sort/)
+  
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/405ec92b-83a3-4130-a625-067155d5a264" />
+
+``` c
+#include <stdio.h>
+#define ARRAY_LEN(arr) sizeof(arr) / sizeof(arr[0])
+
+int main()
+{
+	int arr[5] = { 64, 25, 12, 22, 11 };
+	//for (int i = 0; i < 5; ++i)
+	//	printf("%d\n", *(list + i));
+
+	//printf("%zu", sizeof(list)/ sizeof(list[0]));
+
+	int len = ARRAY_LEN(arr);
+
+	int n = 0;
+	while (n < len)
+		printf("%d ", *(arr + n++));
+	printf("\n");
+
+	int box = 0;
+	int min_idx = 0;
+
+	for (int i = 0; i < len-1; ++i)
+	{
+		min_idx = i;
+		//printf("min_idx : %d\n", min_idx);
+		for (int list_idx = (min_idx + 1); list_idx < len; ++list_idx)
+		{	
+			//printf("%d compare %d\n", *(list + list_idx), *(list + min_idx));
+			if (*(arr + list_idx) < *(arr + min_idx))
+				min_idx = list_idx;
+		}
+		box = *(arr + i);
+		arr[i] = arr[min_idx];
+		arr[min_idx] = box;
+
+		n = 0;
+		while (n < len)
+			printf("%d ", *(arr + n++));
+		printf("\n");
+	}
+
+	/*
+	64 25 12 22 11
+	11 25 12 22 64
+	11 12 25 22 64
+	11 12 22 25 64
+	11 12 22 25 64
+	*/
+
+	return 0;
+}
+```
+
+
+### 📌 11.8 문자열의 포인터를 정렬하기
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/9554fb39-359f-4e23-9d46-072e1fc727fb" />
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/8f94304a-0934-49d4-885e-d99802da5be6" />
+
+``` c
+#include <stdio.h>
+#include <string.h>
+
+int main()
+{
+	char* arr[] = { "Cherry", "AppleBee", "Pineapple", "Apple", "Orange" };
+	int len = sizeof(arr) / sizeof(arr[0]);  // 5
+
+	int n = 0;
+	while (n < len)
+		puts(*(arr + n++));
+	printf("\n");
+
+
+	char* box = 0;
+	int min_idx = 0;
+	
+	for (int i = 0; i < len-1; ++i)
+	{
+		min_idx = i;
+		//printf("min_idx : %d\n", min_idx);
+		for (int arr_idx = (min_idx + 1); arr_idx < len; ++arr_idx)
+		{	
+			int comp = strcmp(*(arr + arr_idx), *(arr + min_idx));
+			//printf("%c compare %c = %d\n", *(*(arr + arr_idx)), *(*(arr + min_idx)), comp);
+
+			//if (comp == -1)
+			if (comp < 0)
+				min_idx = arr_idx;
+		}
+		box = *(arr + i);
+		*(arr + i) = *(arr + min_idx);
+		*(arr + min_idx) = box;
+
+	}
+
+	n = 0;
+	while (n < len)
+		puts(*(arr + n++));
+	printf("\n");
+
+	return 0;
+
+	/*
+	Cherry
+	AppleBee
+	Pineapple
+	Apple
+	Orange
+
+	Apple
+	AppleBee
+	Cherry
+	Orange
+	Pineapple
+	*/
+}
+```
+
+
+### 📌 11.9 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
