--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -837,26 +837,86 @@ int PunctCount(const char* str)
 ```
 
 
-### 📌 11.10 11.10 명령줄 인수
+### 📌 11.10 명령줄 인수 (Command Line Arguments)
+- int main(int argc, char* argv[])  
+  운영체제가 프로그램을 실행할 때 인자를 넘겨줄 수 있도록 도와준다.  
+  <img width="400" alt="image" src="https://github.com/user-attachments/assets/ac94091e-0771-44d8-83d6-425995ce540d" />
+
+``` c
+#include <stdio.h>
+
+int main(int argc, char* argv[])
+{
+	int count;
+
+	printf("The command line has %d arguments:\n", argc);
+
+	for (count = 0; count < argc; count++)
+		printf("Arg %d : %s\n", count, argv[count]);
+	printf("\n");
+
+	return 0;
+}
+```
 
 
+### 📌 11.11 문자열을 숫자로 바꾸는 방법들
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/5e8e61aa-7c3b-4fe9-ac47-cb92d515e420" />
 
+``` c
+#include <stdio.h>
+#include <stdlib.h>
 
+int main(int argc, char* argv[])
+{
+	/*
+		문자열을 int, double, long으로 변경.
+		string to integer, double, long
+		atoi(), atof(), atol()
+	*/
 
+	if (argc < 3)
+		printf("Wrong Usage of %s\n", argv[0]);
+	else
+	{
+		/* Example 1*/
+		int times = atoi(argv[1]);  // 숫자를 문자로 입력을 받고 다시 정수로 변경 // atof(), atol()
+		for (int i = 0; i < times; i++)
+			puts(argv[2]);
 
+		/* Example 2 */
+		printf("Sum = %d\n", atoi(argv[1]) + atoi(argv[2]) + atoi(argv[3]));
+	}
 
+	/*
+		반환 불가부터 end 포인터로 들어가는 것이 중요.
+		string to long, unsigned long, double
+		strtol(), strtoul(), strtod()
 
+		strtod() converts base 10 only
+	*/
 
+	char str1[] = "1024Hello";
+	char* end;
+	long l = strtoul(str1, &end, 10);
+	printf("%s %ld %s %d\n", str1, l, end, (int)*end);  // 1024Hello 1024 Hello 72
+	// 1024까지는 변환이 되서 l에 들어가는데, H부터 변환불가로 end 포인터에 들어간다.
 
+	char str2[] = "10FFHello";
+	l = strtol(str2, &end, 16);
+	printf("%s %ld %s %d\n", str2, l, end, (int)*end);  // 10FFHello 4351 Hello 72
 
+	/*
+		Numbers to strings
+		Use sprintf() instead of itoa(), ftoa()
+	*/
 
+	char temp[100];
+	puts(_itoa(10, temp, 16));  // a  // 10을 16진수 문자열로 출력함
+	
+	sprintf(temp, "%x", 10);  // a  
+	puts(temp);
 
-
-
-
-
-
-
-
-
-
+	return 0;
+}
+```
