--- a/C/11.0_String_Functions.md
+++ b/C/11.0_String_Functions.md
@@ -913,7 +913,8 @@ int main(int argc, char* argv[])
 
 	char temp[100];
 	puts(_itoa(10, temp, 16));  // a  // 10을 16진수 문자열로 출력함
-	
+
+        // sprintf()는 포매팅을 이용해서 데이터를 문자열로 변환해주는 함수
 	sprintf(temp, "%x", 10);  // a  
 	puts(temp);
 
