--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -1,1 +1,56 @@
 ### 📌 12.1 메모리 레이아웃 훑어보기
+- stack (지역 변수) -> 크기 변동  
+  메모리 사이즈가 compile time에 결정됨  
+  중괄호 안에서 자동으로 메모리의 할당 및 (운영체제에게로) 반납이 이루어 진다.  
+  Tip) 큰 메모리를 사용해야하는 기능은, 함수로 분리해서 사용 후 반납하는 것이 효율적이다.  
+- Free -> 크기 변동  
+- Heap -> 크기 변동  
+- 메모리 사이즈가 compile time에 결정되지 않음  
+  메모리를 배정할 때, 어디에 배정해야 될지 운영체제를 거쳐서 메모리의 할당 및 반납이 되므로 느리다.  
+  사용 종료 후 manual로 free(arr)처럼 반납 필요!  
+- BSS(Block Started by Symbol) Segment (초기화되지 않은 전역 변수들) -> 크기 고정  
+  DATA Segment (초기화된 전역 변수들) -> 크기 고정  
+- Text Segment(프로그램 코드, Read Only) -> 크기 고정  
+  실행을 위해여 프로그램 자체가 메모리에 올라가는 장소.
+
+
+### 📌 12.2 객체와 식별자, lvalue와 rvalue
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
