--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -1,4 +1,6 @@
 ### 📌 12.1 메모리 레이아웃 훑어보기
+<img width="650" src="https://github.com/user-attachments/assets/c1e5a371-4e02-4e02-9139-ba7c58827498"/>
+
 - stack (지역 변수) -> 크기 변동  
   메모리 사이즈가 compile time에 결정됨  
   중괄호 안에서 자동으로 메모리의 할당 및 (운영체제에게로) 반납이 이루어 진다.  
@@ -14,7 +16,75 @@
   실행을 위해여 프로그램 자체가 메모리에 올라가는 장소.
 
 
-### 📌 12.2 객체와 식별자, lvalue와 rvalue
+### 📌 12.2 객체(Object)와 식별자(Identifier), lvalue와 rvalue
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/*
+		Object (객체)
+		- "An object is simply a block of memory that can store a value." (KNK p. 487)
+		 = 메모리 공간을 갖고 있으면 객체 !
+		- Object has more develped meaning in C++ and Object Oriented Programming (OOP)
+		 = python의 객체는 c언어의 객체에서 확장된 개념. oop(객체지향 프로그래밍)
+
+		Identifiers (인식자)
+		- Names for variables, functions, macros, and other entities. (KNK p. 25)
+		 = 변수 이름 !
+	*/
+
+	// 객체는 메모리 공간, 인식자는 var_name
+	// 메모리 공간에 3이라는 값을 복사해서 넣어주는 것.
+	// 인식자는 이름에 불과한데 마치 객체를 직접 다루는 것 처럼 c언어가 도와줌.
+	int var_name = 3;		// creates an object called 'var_name'.
+
+	int* pt = &var_name;	// pt is an identifier.
+	*pt = 1;				// *pt is not an identifier. *pt designates an object.
+
+	int arr[100];	// arr is an identifier. Is arr an object?
+	arr[0] = 7;		// arr[0] is an object.
+
+	/*
+		lvalue is an expression 'referring' to an object. (K&R p.197)
+
+		L-value : left side of an assignment
+		R-value : right side, variable, constant, expressions (KNK p. 67)
+	*/
+
+	var_name = 3;	// modifiable lvalue
+	int temp = var_name;
+	temp = 1 + 2;
+
+	pt = &var_name;
+	int* ptr = arr;
+	*pt = 7;	// *pt is not an identifier but an modifiable lvalue expression.
+
+	int* ptr2 = arr + 2 * var_name; // address rvalue
+	*(arr + 2 * var_name) = 456;	// lvalue expression
+
+	const char* str = "Constant string";		// str is a modifiable lvalue.
+	str = "Second string";	// "Constant string" = "Second String"	// impossible
+	//str[0] = 'A'; // Error
+	//puts(str);
+
+	char str2[] = "String in an array";
+	str2[0] = 'A';	// OK
+	//puts(str2);
+
+	/*
+		Identifiers have scope.
+		Objects have storage duration.
+		Variables and functions have one of the following linkages:
+			external linkage, internal linkage, or no linkage.
+	*/
+
+	return 0;
+}
+```
+
+
+### 📌 
 
 
 
