--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -1,6 +1,8 @@
 ### 📌 12.1 메모리 레이아웃 훑어보기
 <img width="650" src="https://github.com/user-attachments/assets/c1e5a371-4e02-4e02-9139-ba7c58827498"/>
 
+<img width="500" src="https://github.com/user-attachments/assets/7a7de061-7b3d-40ae-a377-f8ab98e59e1a"/>
+
 - stack (지역 변수) -> 크기 변동  
   메모리 사이즈가 compile time에 결정됨  
   중괄호 안에서 자동으로 메모리의 할당 및 (운영체제에게로) 반납이 이루어 진다.  
@@ -84,16 +86,192 @@ int main()
 ```
 
 
-### 📌 
+### 📌 12.3 변수의 영역(Scope)과 연결 상태(Linkage), 객체의 지속 기간(Duration)
+- BSS segment에서 g_j가 0으로 초기화 되기 때문에, 명시하지 않아도 printf("%d\n", g_j) 에서 에러가 없다. (g_j는 file scope이다. = 전역변수)  
+- file 's scope.
+``` c
+#include <stdio.h>
+
+/*
+	변수의 영역
+	Variable scopes (visibility)
+	- block, function, function prototype, file.
+*/
+
+int g_i = 123;	// global variable
+int g_j;		// global variable
+
+void func1()
+{
+	g_i++; 	// uses g_i
+}
+
+void func2()
+{
+	g_i += 2;	// uses g_i
+
+	//local = 456;	// Error
+}
+
+int main()
+{
+	int local = 1234;
+
+	func1();
+	func2();
+
+	printf("%d\n", g_i);	// 126	// uses g_i
+	printf("%d\n", g_j);	// 0    // Not initialized?  
+	printf("%d\n", local);	// 1234
+
+	return 0;
+}
+```
+- block, function, function prototype 's scope.
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+	Variable scopes (visibility)
+	- block, function, function prototype, file.
+*/
+
+void f1(int hello, double world);	// prototype declaration(지속기간)은 지금 이 문장 끝나는 지점까지.
+//void vla_param(int n, int m, double ar[n][m]); // gcc only
+
+double func_block(double d)
+{
+	double p = 0.0;
+
+	int i;
+	for (i = 0; i < 10; i++)
+		//for (int i = 0; i < 10; i++) // C99
+	{
+		double q = d * i;
+		p *= q;
+
+		if (i == 5)
+			goto hello;
+	}
+
+hello:
+	printf("Hello, World");
+
+	return p;
+}
+
+int main()
+{
+	func_block(1.0);
+}
+
+void f1(int hello, double world)
+{
+}
+
+//void vla_param(int n, int m, double ar[n][m])
+//{
+//
+//}
+```
+- (Linker <->) Linkage  
+  compilter translation Unit은 file이다. file이 분리되어 있으면 서로 알 방법이 없다.  
+  `int main() 밖에 선언한 변수`는 `extern` (저장 클래스 지정자(Storage Class Specifier))을 사용하여 다른 file에서도 사용이 가능하기 때문에, 해당 변수 이름이 `전역 변수`가 되었다.  
+  `static`을 붙이면, `해당 파일에서만 접근 가능`하다. (internal linkage)  
+  <img width="500" src="https://github.com/user-attachments/assets/14dc0542-9d11-4e22-b38f-490261836600"/>
+
+``` c
+//////// 03B_Linkage
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+	Linkage
+
+	Variables with block scope, function scope, or function prototype scope
+	- No linkage
+
+	File scope variables
+	- External or internal linkage
+*/
+
+// translation unit
+
+int el;			// file scope with external linkage (global variable)
+static int il;	// file scope with internal linkage
+
+void testLinkage();
+
+int main()
+{
+	el = 1024;
+
+	testLinkage();
+
+	printf("%d\n", el);
+
+	return 0;
+}
+
+//////// second.c
+#include <stdio.h>
+
+extern int el;
+//extern int il;
+
+void testLinkage()
+{
+	printf("DoSomething called\n");
+	printf("%d\n", el);
+	//printf("%d\n", il);
+	//printf("%d", dodgers);
+
+	el++;
+}
+```
+- duration
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+	Storage duration:
+	- static storage duration  <- 시작할 때부터 끝날 때까지 유지. (Text Segment)
+	  (Note: 'static' keyword indicates the linkage type, not the storage duration) * 개념차이!
+	- automatic storage duration  <- 지역변수 (stack)
+	- allocated storage duration  <- 동적할당 (heap)
+	- thread storage duration  <- 멀티쓰레딩
+*/
+
+void count()
+{
+	int ct = 0;
+	printf("count = %d\n", ct);
+	ct++;
+}
+
+void static_count()
+{
+	static int ct = 0;  // 함수가 종료되어도 변수가 유지된다.
+	printf("static count = %d\n", ct);
+	ct++;
+}
+
+int main()
+{
+	count();  // count = 0
+	count();  // count = 0
+	static_count();  // static count = 0
+	static_count();  // static count = 1
+
+	return 0;
+}
+```
 
 
-
-
-
-
-
-
-
+### 📌 12.4 저장 공간의 다섯 가지 분류(Five Storage Classes)
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/d1b61d5d-3809-4fb7-8a17-898b81c3555b" />
 
 
 
